# ethicsupply

./: .gitignore  =1.0.0  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  result.csv  run.py  setup.py  supplier_export_template.csv  supplier_template.csv  train_from_db.py  train_model.py
EthicSupply.app/Contents/: Info.plist
EthicSupply.app/Contents/MacOS/: EthicSupply
docs/: EthicSupply_Complete_Documentation.docx  EthicSupply_Detailed_Documentation.docx  README.md  data_and_optimization.md  gui_components.md  tensorflow_integration.md  visualization.md
installer/: README.md
installer/mac/: install.sh
installer/windows/: installer.iss
src/: __init__.py  main.py
src/data/: __init__.py  database.py  database_new.py  database_pool.py  db_diagnostic.py  ethicsupply.db  ethicsupply_new.db  ethicsupply_wal.db-shm  ethicsupply_wal.db-wal
src/gui/: __init__.py  about_page.py  dashboard_page.py  input_page.py  main_window.py  recent_activity_page.py  results_page.py  settings_page.py  sidebar.py
src/models/: db_model_training.py  supplier_model.h5  supplier_model.py
src/utils/: sample_data.py
