[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ethicsupply"
version = "1.0.0"
description = "Ethical AI Supply Chain Optimizer"
authors = [
    {name = "Mohammad Afsharfar", email = "mohammad.afsharfar@example.com"},
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Business/Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Office/Business",
]

[project.urls]
Homepage = "https://github.com/ne3mer/ethicsupply"
Repository = "https://github.com/ne3mer/ethicsupply.git"

[project.scripts]
ethicsupply = "src.main:main"

[project.dependencies]
PyQt6 = ">=6.4.0"
pandas = ">=1.5.0"
numpy = ">=1.21.0"
plotly = ">=5.13.0"
tensorflow = ">=2.12.0"
scikit-learn = ">=1.0.0"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "flake8>=4.0.0",
    "mypy>=0.900",
] 